Aggiunto endpoint search e nodemon
